# bars-api

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  TODO.md  barsapi.py  pyproject.toml  requirements.txt  zs_conf.json
docs/: package.json
docs/docs/: index.md
docs/docs/.vitepress/: config.ts
docs/docs/methods/: get_birthdays.md  get_class_hours.md  get_class_year_info.md  get_events.md  get_person_data.md  get_school_info.md  get_summary_marks.md  get_total_marks.md
src/bars_api/: __init__.py  barsapi.py  consts.py  exceptions.py  parser.py  types.py
