[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "barsapi"
version = "2.2.0"
dependencies = [
  "aiohttp==3.12.14",
  "fake-useragent==2.2.0",
]
requires-python = ">=3.11"
authors = [
  {name="askiphy", email="durovam06@gmail.com"},
  {name="iamlostshe", email="vanamelcikov7275@gmail.com"}
]
maintainers = [
  {name="askiphy", email="durovam06@gmail.com"},
  {name="iamlostshe", email="vanamelcikov7275@gmail.com"}
]
description = "Library to get data from Bars School Diary"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
  "school", "школа",
  "diary", "дневник",
  "pars", "parser", "парсер",
  "parsing", "парсинг",
  "api", "апи"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: aiohttp",
  "Framework :: AsyncIO",
  "License :: OSI Approved :: MIT License",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/askiphy/BarsAPI"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/askiphy/BarsAPI.git"
"Bug Tracker" = "https://github.com/askiphy/BarsAPI/issues"
Changelog = "https://github.com/askiphy/BarsAPI/CHANGELOG.md"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Ошибки связанные с кирилицей
    "RUF001", "RUF002", "RUF003",

    # TODO
    "TD003", "FIX002",

    # Cравнение магических значений
    "PLR2004",

    # Работа с датой
    "DTZ005",
]
